// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectLoadingActions.migrateValidateLoadProject should just open project if project name is valid 1`] = `
Array [
  Object {
    "alertMessage": "projects.loading_project_alert",
    "buttonText": null,
    "callback": null,
    "loading": true,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "type": "CLEAR_RESOURCES_REDUCER",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "pathLocation": "en_ult_tit_book",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "manifest": Object {
      "checkers": Array [],
      "generator": Object {
        "build": "",
        "name": "tc-desktop",
      },
      "license": "CC BY-SA 4.0",
      "project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "repo": "",
      "resource": Object {
        "id": "ult",
        "name": "",
      },
      "source_translations": Array [
        Object {
          "checking_level": "",
          "date_modified": "2018-01-31T19:19:27.914Z",
          "language_id": "en",
          "resource_id": "ult",
          "version": "",
        },
      ],
      "target_language": Object {
        "book": Object {
          "name": "Titus",
        },
        "direction": "ltr",
        "id": "en",
        "name": "English",
      },
      "tcInitialized": true,
      "tc_version": 8,
      "time_created": "2018-01-31T19:19:27.914Z",
      "tools": Array [],
      "translators": Array [],
      "ts_project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "type": Object {
        "id": "text",
        "name": "Text",
      },
    },
    "type": "STORE_MANIFEST",
  },
  Object {
    "settings": Object {
      "last_opened": null,
    },
    "type": "STORE_PROJECT_SETTINGS",
  },
  Object {
    "languageName": "English",
    "type": "SET_LANGUAGE_NAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageId": "en",
    "type": "SET_LANGUAGE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageDirection": "ltr",
    "type": "SET_LANGUAGE_DIRECTION_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "projectFont": "default",
    "type": "SET_PROJECT_FONT_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bookId": "tit",
    "type": "SET_BOOK_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "resourceId": "ult",
    "type": "SET_RESOURCE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "nickname": "",
    "type": "SET_NICKNAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "contributors": Array [],
    "type": "SET_CONTRIBUTORS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "checkers": Array [],
    "type": "SET_CHECKERS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bibleData": Object {
      "1": Object {
        "1": "Paul, a servant of God and an apostle of Jesus Christ, for the faith of God's chosen people and the knowledge of the truth that agrees with godliness,",
        "10": "For there are many rebellious people, empty talkers and deceivers, especially those of the circumcision.",
        "11": "It is necessary to stop them. They are upsetting whole families by teaching for shameful profit what they should not teach.",
        "12": "One of their own prophets has said, \\"Cretans are always liars, evil beasts, lazy gluttons.\\"",
        "13": "This statement is true. Therefore, correct them severely, so that they may be sound in the faith,",
        "14": "not paying any attention to Jewish myths or to the commands of people who turn away from the truth.",
        "15": "To those who are pure, all things are pure. But to those who are corrupt and unbelieving, nothing is pure, but both their minds and their consciences have been corrupted.",
        "16": "They profess to know God, but they deny him by their actions. They are detestable, disobedient, and unfit for doing any good work.",
        "2": "with the certain hope of everlasting life that God, who does not lie, promised before all the ages of time.",
        "3": "At the right time, he revealed his word by the message that he trusted me to deliver, by the command of God our savior.",
        "4": "To Titus, a true son in our common faith. Grace and peace from God the Father and Christ Jesus our savior.",
        "5": "For this purpose I left you in Crete, that you might set in order things not yet complete and ordain elders in every city as I directed you.",
        "6": "An elder must be without blame, the husband of one wife, with faithful children not accused of reckless behavior or undisciplined.",
        "7": "It is necessary for the overseer, as God's household manager, to be blameless. He must not be arrogant, not be easily angered, not addicted to wine, not a brawler, and not a greedy man.",
        "8": "Instead, he should be hospitable and a friend of what is good. He must be sensible, righteous, godly, and self-controlled.",
        "9": "He should hold tightly to the trustworthy message that was taught, so that he may be able to encourage others with good teaching and correct those who oppose him.",
      },
      "2": Object {
        "1": "But you, speak what fits with faithful instruction.",
        "10": "to not steal from them, but instead to demonstrate all good faith, so that in every way they may bring credit to the teaching about God our Savior.",
        "11": "For the grace of God has appeared for the salvation of all people.",
        "12": "It trains us to reject godlessness and worldly passions, and to live self-controlled, upright, and godly lives in this age,",
        "13": "while we look forward to receiving our blessed hope, the appearance of the glory of our great God and Savior Jesus Christ.",
        "14": "Jesus gave himself for us in order to redeem us from all lawlessness and to make pure, for himself, a special people who are eager to do good works.",
        "15": "Speak of these things, encourage people to do them, and give correction with all authority. Let no one disregard you.",
        "2": "Teach older men to be temperate, dignified, sensible, sound in faith, in love, and in perseverance.",
        "3": "Teach older women likewise to be reverent in behavior, not slanderers or being slaves to much wine, but to be teachers of what is good.",
        "4": "In this way they may train the younger women to love their own husbands and children,",
        "5": "to be sensible, pure, good housekeepers, and obedient to their own husbands, so that God's word may not be insulted.",
        "6": "In the same way, encourage the younger men to use good sense.",
        "7": "In all ways present yourself as an example of good works. In your teaching, show integrity, dignity,",
        "8": "and a correct message that is above criticism, so that anyone who opposes you may be ashamed because they have nothing bad to say about us.",
        "9": "Teach slaves to obey their masters in everything, to please them and not argue with them,",
      },
      "3": Object {
        "1": "Remind them to submit to rulers and authorities, to obey them, to be ready for every good work,",
        "10": "Reject anyone who is causing divisions among you, after one or two warnings,",
        "11": "knowing that such a person has turned from the right way and is sinning and condemns himself.",
        "12": "When I send Artemas or Tychicus to you, hurry and come to me at Nicopolis, where I have decided to spend the winter.",
        "13": "Do everything you can to send on their way Zenas the lawyer and Apollos, so that they lack nothing.",
        "14": "Our people must learn to engage themselves in good works that provide for urgent needs, and so not be unfruitful.",
        "15": "All those who are with me greet you. Greet those who love us in faith. Grace be with all of you.",
        "2": "to revile no one, to not be eager to fight, and to be gentle, showing all humility toward everyone.",
        "3": "For once we ourselves were thoughtless and disobedient. We were led astray and enslaved by various passions and pleasures. We lived in evil and envy. We were detestable and hated one another.",
        "4": "But when the kindness of God our savior and his love for mankind appeared,",
        "5": "it was not by works of righteousness that we did, but by his mercy that he saved us, through the washing of new birth and renewal by the Holy Spirit,",
        "6": "whom God richly poured on us through our Savior Jesus Christ,",
        "7": "so that having been justified by his grace, we might become heirs with the certain hope of eternal life.",
        "8": "This message is trustworthy. I want you to insist on these things, so that those who have believed in God may be careful to engage themselves in good works. These things are good and useful for everyone.",
        "9": "But avoid foolish debates and genealogies and strife and conflict about the law. Those things are unprofitable and worthless.",
      },
      "manifest": Object {
        "description": "tools.target_language",
        "direction": "ltr",
        "language_id": "en",
        "language_name": "English",
        "resource_id": "targetLanguage",
      },
    },
    "bibleId": "targetBible",
    "languageId": "targetLanguage",
    "owner": null,
    "type": "ADD_NEW_BIBLE_TO_RESOURCES",
  },
  Object {
    "stepIndex": 3,
    "type": "GO_TO_STEP",
  },
  Object {
    "propertyName": "tc_edit_version",
    "type": "ADD_MANIFEST_PROPERTY",
    "value": "CURRENT_APP_VERSION",
  },
  Object {
    "propertyName": "tc_min_compatible_version",
    "type": "ADD_MANIFEST_PROPERTY",
    "value": "CURRENT_MIN_COMPATIBLE_VERSION",
  },
  Object {
    "propertyName": "last_opened",
    "type": "ADD_PROJECT_SETTINGS_PROPERTY",
    "value": "2019-08-22T17:06:12.493Z",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
]
`;

exports[`ProjectLoadingActions.migrateValidateLoadProject should open to details screen if project name is not valid 1`] = `
Array [
  Object {
    "alertMessage": "projects.loading_project_alert",
    "buttonText": null,
    "callback": null,
    "loading": true,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "type": "CLEAR_RESOURCES_REDUCER",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "pathLocation": "en_tit",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "manifest": Object {
      "checkers": Array [],
      "generator": Object {
        "build": "",
        "name": "tc-desktop",
      },
      "license": "CC BY-SA 4.0",
      "project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "repo": "",
      "resource": Object {
        "id": "",
        "name": "",
      },
      "source_translations": Array [
        Object {
          "checking_level": "",
          "date_modified": "2018-01-31T19:19:27.914Z",
          "language_id": "en",
          "resource_id": "ult",
          "version": "",
        },
      ],
      "target_language": Object {
        "book": Object {
          "name": "Titus",
        },
        "direction": "ltr",
        "id": "en",
        "name": "English",
      },
      "tcInitialized": true,
      "tc_version": 8,
      "time_created": "2018-01-31T19:19:27.914Z",
      "tools": Array [],
      "translators": Array [],
      "ts_project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "type": Object {
        "id": "text",
        "name": "Text",
      },
    },
    "type": "STORE_MANIFEST",
  },
  Object {
    "settings": Object {
      "last_opened": null,
    },
    "type": "STORE_PROJECT_SETTINGS",
  },
  Object {
    "languageName": "English",
    "type": "SET_LANGUAGE_NAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageId": "en",
    "type": "SET_LANGUAGE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageDirection": "ltr",
    "type": "SET_LANGUAGE_DIRECTION_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "projectFont": "default",
    "type": "SET_PROJECT_FONT_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bookId": "tit",
    "type": "SET_BOOK_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "resourceId": "",
    "type": "SET_RESOURCE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "nickname": "",
    "type": "SET_NICKNAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "contributors": Array [],
    "type": "SET_CONTRIBUTORS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "checkers": Array [],
    "type": "SET_CHECKERS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "buttonName": "project_information",
    "index": 1,
    "namespace": "projectInformationCheck",
    "type": "ADD_PROJECT_VALIDATION_STEP",
  },
  Object {
    "pathLocation": "en_tit",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "manifest": Object {
      "checkers": Array [],
      "generator": Object {
        "build": "",
        "name": "tc-desktop",
      },
      "license": "CC BY-SA 4.0",
      "project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "repo": "",
      "resource": Object {
        "id": "",
        "name": "",
      },
      "source_translations": Array [
        Object {
          "checking_level": "",
          "date_modified": "2018-01-31T19:19:27.914Z",
          "language_id": "en",
          "resource_id": "ult",
          "version": "",
        },
      ],
      "target_language": Object {
        "book": Object {
          "name": "Titus",
        },
        "direction": "ltr",
        "id": "en",
        "name": "English",
      },
      "tcInitialized": true,
      "tc_version": 8,
      "time_created": "2018-01-31T19:19:27.914Z",
      "tools": Array [],
      "translators": Array [],
      "ts_project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "type": Object {
        "id": "text",
        "name": "Text",
      },
    },
    "type": "STORE_MANIFEST",
  },
  Object {
    "settings": Object {
      "last_opened": null,
    },
    "type": "STORE_PROJECT_SETTINGS",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageName": "English",
    "type": "SET_LANGUAGE_NAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageId": "en",
    "type": "SET_LANGUAGE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageDirection": "ltr",
    "type": "SET_LANGUAGE_DIRECTION_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "projectFont": "default",
    "type": "SET_PROJECT_FONT_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bookId": "tit",
    "type": "SET_BOOK_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "resourceId": "",
    "type": "SET_RESOURCE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "nickname": "",
    "type": "SET_NICKNAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "contributors": Array [],
    "type": "SET_CONTRIBUTORS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "checkers": Array [],
    "type": "SET_CHECKERS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "buttonName": "project_information",
    "index": 1,
    "namespace": "projectInformationCheck",
    "type": "ADD_PROJECT_VALIDATION_STEP",
  },
  Object {
    "type": "ONLY_SHOW_PROJECT_INFORMATION_SCREEN",
    "value": true,
  },
  Object {
    "showProjectValidationStepper": false,
    "type": "TOGGLE_PROJECT_VALIDATION_STEPPER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bibleData": Object {
      "1": Object {
        "1": "Paul, a servant of God and an apostle of Jesus Christ, for the faith of God's chosen people and the knowledge of the truth that agrees with godliness,",
        "10": "For there are many rebellious people, empty talkers and deceivers, especially those of the circumcision.",
        "11": "It is necessary to stop them. They are upsetting whole families by teaching for shameful profit what they should not teach.",
        "12": "One of their own prophets has said, \\"Cretans are always liars, evil beasts, lazy gluttons.\\"",
        "13": "This statement is true. Therefore, correct them severely, so that they may be sound in the faith,",
        "14": "not paying any attention to Jewish myths or to the commands of people who turn away from the truth.",
        "15": "To those who are pure, all things are pure. But to those who are corrupt and unbelieving, nothing is pure, but both their minds and their consciences have been corrupted.",
        "16": "They profess to know God, but they deny him by their actions. They are detestable, disobedient, and unfit for doing any good work.",
        "2": "with the certain hope of everlasting life that God, who does not lie, promised before all the ages of time.",
        "3": "At the right time, he revealed his word by the message that he trusted me to deliver, by the command of God our savior.",
        "4": "To Titus, a true son in our common faith. Grace and peace from God the Father and Christ Jesus our savior.",
        "5": "For this purpose I left you in Crete, that you might set in order things not yet complete and ordain elders in every city as I directed you.",
        "6": "An elder must be without blame, the husband of one wife, with faithful children not accused of reckless behavior or undisciplined.",
        "7": "It is necessary for the overseer, as God's household manager, to be blameless. He must not be arrogant, not be easily angered, not addicted to wine, not a brawler, and not a greedy man.",
        "8": "Instead, he should be hospitable and a friend of what is good. He must be sensible, righteous, godly, and self-controlled.",
        "9": "He should hold tightly to the trustworthy message that was taught, so that he may be able to encourage others with good teaching and correct those who oppose him.",
      },
      "2": Object {
        "1": "But you, speak what fits with faithful instruction.",
        "10": "to not steal from them, but instead to demonstrate all good faith, so that in every way they may bring credit to the teaching about God our Savior.",
        "11": "For the grace of God has appeared for the salvation of all people.",
        "12": "It trains us to reject godlessness and worldly passions, and to live self-controlled, upright, and godly lives in this age,",
        "13": "while we look forward to receiving our blessed hope, the appearance of the glory of our great God and Savior Jesus Christ.",
        "14": "Jesus gave himself for us in order to redeem us from all lawlessness and to make pure, for himself, a special people who are eager to do good works.",
        "15": "Speak of these things, encourage people to do them, and give correction with all authority. Let no one disregard you.",
        "2": "Teach older men to be temperate, dignified, sensible, sound in faith, in love, and in perseverance.",
        "3": "Teach older women likewise to be reverent in behavior, not slanderers or being slaves to much wine, but to be teachers of what is good.",
        "4": "In this way they may train the younger women to love their own husbands and children,",
        "5": "to be sensible, pure, good housekeepers, and obedient to their own husbands, so that God's word may not be insulted.",
        "6": "In the same way, encourage the younger men to use good sense.",
        "7": "In all ways present yourself as an example of good works. In your teaching, show integrity, dignity,",
        "8": "and a correct message that is above criticism, so that anyone who opposes you may be ashamed because they have nothing bad to say about us.",
        "9": "Teach slaves to obey their masters in everything, to please them and not argue with them,",
      },
      "3": Object {
        "1": "Remind them to submit to rulers and authorities, to obey them, to be ready for every good work,",
        "10": "Reject anyone who is causing divisions among you, after one or two warnings,",
        "11": "knowing that such a person has turned from the right way and is sinning and condemns himself.",
        "12": "When I send Artemas or Tychicus to you, hurry and come to me at Nicopolis, where I have decided to spend the winter.",
        "13": "Do everything you can to send on their way Zenas the lawyer and Apollos, so that they lack nothing.",
        "14": "Our people must learn to engage themselves in good works that provide for urgent needs, and so not be unfruitful.",
        "15": "All those who are with me greet you. Greet those who love us in faith. Grace be with all of you.",
        "2": "to revile no one, to not be eager to fight, and to be gentle, showing all humility toward everyone.",
        "3": "For once we ourselves were thoughtless and disobedient. We were led astray and enslaved by various passions and pleasures. We lived in evil and envy. We were detestable and hated one another.",
        "4": "But when the kindness of God our savior and his love for mankind appeared,",
        "5": "it was not by works of righteousness that we did, but by his mercy that he saved us, through the washing of new birth and renewal by the Holy Spirit,",
        "6": "whom God richly poured on us through our Savior Jesus Christ,",
        "7": "so that having been justified by his grace, we might become heirs with the certain hope of eternal life.",
        "8": "This message is trustworthy. I want you to insist on these things, so that those who have believed in God may be careful to engage themselves in good works. These things are good and useful for everyone.",
        "9": "But avoid foolish debates and genealogies and strife and conflict about the law. Those things are unprofitable and worthless.",
      },
      "manifest": Object {
        "description": "tools.target_language",
        "direction": "ltr",
        "language_id": "en",
        "language_name": "English",
        "resource_id": "targetLanguage",
      },
    },
    "bibleId": "targetBible",
    "languageId": "targetLanguage",
    "owner": null,
    "type": "ADD_NEW_BIBLE_TO_RESOURCES",
  },
  Object {
    "stepIndex": 3,
    "type": "GO_TO_STEP",
  },
  Object {
    "propertyName": "tc_edit_version",
    "type": "ADD_MANIFEST_PROPERTY",
    "value": "CURRENT_APP_VERSION",
  },
  Object {
    "propertyName": "tc_min_compatible_version",
    "type": "ADD_MANIFEST_PROPERTY",
    "value": "CURRENT_MIN_COMPATIBLE_VERSION",
  },
  Object {
    "propertyName": "last_opened",
    "type": "ADD_PROJECT_SETTINGS_PROPERTY",
    "value": "2019-08-22T17:06:12.493Z",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
]
`;

exports[`loadProject displays the details screen of an invalid project name 1`] = `
Array [
  Object {
    "alertMessage": "projects.loading_project_alert",
    "buttonText": null,
    "callback": null,
    "loading": true,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "type": "CLEAR_RESOURCES_REDUCER",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "pathLocation": "en_tit",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "manifest": Object {
      "checkers": Array [],
      "generator": Object {
        "build": "",
        "name": "tc-desktop",
      },
      "license": "CC BY-SA 4.0",
      "project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "repo": "",
      "resource": Object {
        "id": "",
        "name": "",
      },
      "source_translations": Array [
        Object {
          "checking_level": "",
          "date_modified": "2018-01-31T19:19:27.914Z",
          "language_id": "en",
          "resource_id": "ult",
          "version": "",
        },
      ],
      "target_language": Object {
        "book": Object {
          "name": "Titus",
        },
        "direction": "ltr",
        "id": "en",
        "name": "English",
      },
      "tcInitialized": true,
      "tc_version": 8,
      "time_created": "2018-01-31T19:19:27.914Z",
      "tools": Array [],
      "translators": Array [],
      "ts_project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "type": Object {
        "id": "text",
        "name": "Text",
      },
    },
    "type": "STORE_MANIFEST",
  },
  Object {
    "settings": Object {
      "last_opened": null,
    },
    "type": "STORE_PROJECT_SETTINGS",
  },
  Object {
    "languageName": "English",
    "type": "SET_LANGUAGE_NAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageId": "en",
    "type": "SET_LANGUAGE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageDirection": "ltr",
    "type": "SET_LANGUAGE_DIRECTION_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "projectFont": "default",
    "type": "SET_PROJECT_FONT_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bookId": "tit",
    "type": "SET_BOOK_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "resourceId": "",
    "type": "SET_RESOURCE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "nickname": "",
    "type": "SET_NICKNAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "contributors": Array [],
    "type": "SET_CONTRIBUTORS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "checkers": Array [],
    "type": "SET_CHECKERS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "buttonName": "project_information",
    "index": 1,
    "namespace": "projectInformationCheck",
    "type": "ADD_PROJECT_VALIDATION_STEP",
  },
  Object {
    "pathLocation": "en_tit",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "manifest": Object {
      "checkers": Array [],
      "generator": Object {
        "build": "",
        "name": "tc-desktop",
      },
      "license": "CC BY-SA 4.0",
      "project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "repo": "",
      "resource": Object {
        "id": "",
        "name": "",
      },
      "source_translations": Array [
        Object {
          "checking_level": "",
          "date_modified": "2018-01-31T19:19:27.914Z",
          "language_id": "en",
          "resource_id": "ult",
          "version": "",
        },
      ],
      "target_language": Object {
        "book": Object {
          "name": "Titus",
        },
        "direction": "ltr",
        "id": "en",
        "name": "English",
      },
      "tcInitialized": true,
      "tc_version": 8,
      "time_created": "2018-01-31T19:19:27.914Z",
      "tools": Array [],
      "translators": Array [],
      "ts_project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "type": Object {
        "id": "text",
        "name": "Text",
      },
    },
    "type": "STORE_MANIFEST",
  },
  Object {
    "settings": Object {
      "last_opened": null,
    },
    "type": "STORE_PROJECT_SETTINGS",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageName": "English",
    "type": "SET_LANGUAGE_NAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageId": "en",
    "type": "SET_LANGUAGE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageDirection": "ltr",
    "type": "SET_LANGUAGE_DIRECTION_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "projectFont": "default",
    "type": "SET_PROJECT_FONT_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bookId": "tit",
    "type": "SET_BOOK_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "resourceId": "",
    "type": "SET_RESOURCE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "nickname": "",
    "type": "SET_NICKNAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "contributors": Array [],
    "type": "SET_CONTRIBUTORS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "checkers": Array [],
    "type": "SET_CHECKERS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "buttonName": "project_information",
    "index": 1,
    "namespace": "projectInformationCheck",
    "type": "ADD_PROJECT_VALIDATION_STEP",
  },
  Object {
    "type": "ONLY_SHOW_PROJECT_INFORMATION_SCREEN",
    "value": true,
  },
  Object {
    "showProjectValidationStepper": false,
    "type": "TOGGLE_PROJECT_VALIDATION_STEPPER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bibleData": Object {
      "1": Object {
        "1": "Paul, a servant of God and an apostle of Jesus Christ, for the faith of God's chosen people and the knowledge of the truth that agrees with godliness,",
        "10": "For there are many rebellious people, empty talkers and deceivers, especially those of the circumcision.",
        "11": "It is necessary to stop them. They are upsetting whole families by teaching for shameful profit what they should not teach.",
        "12": "One of their own prophets has said, \\"Cretans are always liars, evil beasts, lazy gluttons.\\"",
        "13": "This statement is true. Therefore, correct them severely, so that they may be sound in the faith,",
        "14": "not paying any attention to Jewish myths or to the commands of people who turn away from the truth.",
        "15": "To those who are pure, all things are pure. But to those who are corrupt and unbelieving, nothing is pure, but both their minds and their consciences have been corrupted.",
        "16": "They profess to know God, but they deny him by their actions. They are detestable, disobedient, and unfit for doing any good work.",
        "2": "with the certain hope of everlasting life that God, who does not lie, promised before all the ages of time.",
        "3": "At the right time, he revealed his word by the message that he trusted me to deliver, by the command of God our savior.",
        "4": "To Titus, a true son in our common faith. Grace and peace from God the Father and Christ Jesus our savior.",
        "5": "For this purpose I left you in Crete, that you might set in order things not yet complete and ordain elders in every city as I directed you.",
        "6": "An elder must be without blame, the husband of one wife, with faithful children not accused of reckless behavior or undisciplined.",
        "7": "It is necessary for the overseer, as God's household manager, to be blameless. He must not be arrogant, not be easily angered, not addicted to wine, not a brawler, and not a greedy man.",
        "8": "Instead, he should be hospitable and a friend of what is good. He must be sensible, righteous, godly, and self-controlled.",
        "9": "He should hold tightly to the trustworthy message that was taught, so that he may be able to encourage others with good teaching and correct those who oppose him.",
      },
      "2": Object {
        "1": "But you, speak what fits with faithful instruction.",
        "10": "to not steal from them, but instead to demonstrate all good faith, so that in every way they may bring credit to the teaching about God our Savior.",
        "11": "For the grace of God has appeared for the salvation of all people.",
        "12": "It trains us to reject godlessness and worldly passions, and to live self-controlled, upright, and godly lives in this age,",
        "13": "while we look forward to receiving our blessed hope, the appearance of the glory of our great God and Savior Jesus Christ.",
        "14": "Jesus gave himself for us in order to redeem us from all lawlessness and to make pure, for himself, a special people who are eager to do good works.",
        "15": "Speak of these things, encourage people to do them, and give correction with all authority. Let no one disregard you.",
        "2": "Teach older men to be temperate, dignified, sensible, sound in faith, in love, and in perseverance.",
        "3": "Teach older women likewise to be reverent in behavior, not slanderers or being slaves to much wine, but to be teachers of what is good.",
        "4": "In this way they may train the younger women to love their own husbands and children,",
        "5": "to be sensible, pure, good housekeepers, and obedient to their own husbands, so that God's word may not be insulted.",
        "6": "In the same way, encourage the younger men to use good sense.",
        "7": "In all ways present yourself as an example of good works. In your teaching, show integrity, dignity,",
        "8": "and a correct message that is above criticism, so that anyone who opposes you may be ashamed because they have nothing bad to say about us.",
        "9": "Teach slaves to obey their masters in everything, to please them and not argue with them,",
      },
      "3": Object {
        "1": "Remind them to submit to rulers and authorities, to obey them, to be ready for every good work,",
        "10": "Reject anyone who is causing divisions among you, after one or two warnings,",
        "11": "knowing that such a person has turned from the right way and is sinning and condemns himself.",
        "12": "When I send Artemas or Tychicus to you, hurry and come to me at Nicopolis, where I have decided to spend the winter.",
        "13": "Do everything you can to send on their way Zenas the lawyer and Apollos, so that they lack nothing.",
        "14": "Our people must learn to engage themselves in good works that provide for urgent needs, and so not be unfruitful.",
        "15": "All those who are with me greet you. Greet those who love us in faith. Grace be with all of you.",
        "2": "to revile no one, to not be eager to fight, and to be gentle, showing all humility toward everyone.",
        "3": "For once we ourselves were thoughtless and disobedient. We were led astray and enslaved by various passions and pleasures. We lived in evil and envy. We were detestable and hated one another.",
        "4": "But when the kindness of God our savior and his love for mankind appeared,",
        "5": "it was not by works of righteousness that we did, but by his mercy that he saved us, through the washing of new birth and renewal by the Holy Spirit,",
        "6": "whom God richly poured on us through our Savior Jesus Christ,",
        "7": "so that having been justified by his grace, we might become heirs with the certain hope of eternal life.",
        "8": "This message is trustworthy. I want you to insist on these things, so that those who have believed in God may be careful to engage themselves in good works. These things are good and useful for everyone.",
        "9": "But avoid foolish debates and genealogies and strife and conflict about the law. Those things are unprofitable and worthless.",
      },
      "manifest": Object {
        "description": "tools.target_language",
        "direction": "ltr",
        "language_id": "en",
        "language_name": "English",
        "resource_id": "targetLanguage",
      },
    },
    "bibleId": "targetBible",
    "languageId": "targetLanguage",
    "owner": null,
    "type": "ADD_NEW_BIBLE_TO_RESOURCES",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "alertMessage": "projects.error_loading",
    "buttonText": null,
    "callback": null,
    "loading": undefined,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "showProjectValidationStepper": false,
    "type": "TOGGLE_PROJECT_VALIDATION_STEPPER",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "type": "CLEAR_COPYRIGHT_CHECK_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "type": "CLEAR_MERGE_CONFLICTS_REDUCER",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "projects": Array [
      Object {
        "bookAbbr": "tit",
        "bookName": "Titus",
        "isSelected": true,
        "lastOpened": null,
        "projectName": "en_tit",
        "projectSaveLocation": "/Users/jest/mock/path/translationCore/projects/en_tit",
        "target_language": Object {
          "book": Object {
            "name": "Titus",
          },
          "direction": "ltr",
          "id": "en",
          "name": "English",
        },
      },
    ],
    "type": "GET_MY_PROJECTS",
  },
]
`;

exports[`loadProject opens a valid project 1`] = `
Array [
  Object {
    "alertMessage": "projects.loading_project_alert",
    "buttonText": null,
    "callback": null,
    "loading": true,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "type": "CLEAR_RESOURCES_REDUCER",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "pathLocation": "en_ult_tit_book",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "manifest": Object {
      "checkers": Array [],
      "generator": Object {
        "build": "",
        "name": "tc-desktop",
      },
      "license": "CC BY-SA 4.0",
      "project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "repo": "",
      "resource": Object {
        "id": "ult",
        "name": "",
      },
      "source_translations": Array [
        Object {
          "checking_level": "",
          "date_modified": "2018-01-31T19:19:27.914Z",
          "language_id": "en",
          "resource_id": "ult",
          "version": "",
        },
      ],
      "target_language": Object {
        "book": Object {
          "name": "Titus",
        },
        "direction": "ltr",
        "id": "en",
        "name": "English",
      },
      "tcInitialized": true,
      "tc_version": 8,
      "time_created": "2018-01-31T19:19:27.914Z",
      "tools": Array [],
      "translators": Array [],
      "ts_project": Object {
        "id": "tit",
        "name": "Titus",
      },
      "type": Object {
        "id": "text",
        "name": "Text",
      },
    },
    "type": "STORE_MANIFEST",
  },
  Object {
    "settings": Object {
      "last_opened": null,
    },
    "type": "STORE_PROJECT_SETTINGS",
  },
  Object {
    "languageName": "English",
    "type": "SET_LANGUAGE_NAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageId": "en",
    "type": "SET_LANGUAGE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "languageDirection": "ltr",
    "type": "SET_LANGUAGE_DIRECTION_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "projectFont": "default",
    "type": "SET_PROJECT_FONT_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bookId": "tit",
    "type": "SET_BOOK_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "resourceId": "ult",
    "type": "SET_RESOURCE_ID_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "nickname": "",
    "type": "SET_NICKNAME_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "contributors": Array [],
    "type": "SET_CONTRIBUTORS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "checkers": Array [],
    "type": "SET_CHECKERS_IN_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "nextDisabled": true,
    "type": "UPDATE_PROJECT_VALIDATION_NEXT_BUTTON_STATUS",
  },
  Object {
    "bibleData": Object {
      "1": Object {
        "1": "Paul, a servant of God and an apostle of Jesus Christ, for the faith of God's chosen people and the knowledge of the truth that agrees with godliness,",
        "10": "For there are many rebellious people, empty talkers and deceivers, especially those of the circumcision.",
        "11": "It is necessary to stop them. They are upsetting whole families by teaching for shameful profit what they should not teach.",
        "12": "One of their own prophets has said, \\"Cretans are always liars, evil beasts, lazy gluttons.\\"",
        "13": "This statement is true. Therefore, correct them severely, so that they may be sound in the faith,",
        "14": "not paying any attention to Jewish myths or to the commands of people who turn away from the truth.",
        "15": "To those who are pure, all things are pure. But to those who are corrupt and unbelieving, nothing is pure, but both their minds and their consciences have been corrupted.",
        "16": "They profess to know God, but they deny him by their actions. They are detestable, disobedient, and unfit for doing any good work.",
        "2": "with the certain hope of everlasting life that God, who does not lie, promised before all the ages of time.",
        "3": "At the right time, he revealed his word by the message that he trusted me to deliver, by the command of God our savior.",
        "4": "To Titus, a true son in our common faith. Grace and peace from God the Father and Christ Jesus our savior.",
        "5": "For this purpose I left you in Crete, that you might set in order things not yet complete and ordain elders in every city as I directed you.",
        "6": "An elder must be without blame, the husband of one wife, with faithful children not accused of reckless behavior or undisciplined.",
        "7": "It is necessary for the overseer, as God's household manager, to be blameless. He must not be arrogant, not be easily angered, not addicted to wine, not a brawler, and not a greedy man.",
        "8": "Instead, he should be hospitable and a friend of what is good. He must be sensible, righteous, godly, and self-controlled.",
        "9": "He should hold tightly to the trustworthy message that was taught, so that he may be able to encourage others with good teaching and correct those who oppose him.",
      },
      "2": Object {
        "1": "But you, speak what fits with faithful instruction.",
        "10": "to not steal from them, but instead to demonstrate all good faith, so that in every way they may bring credit to the teaching about God our Savior.",
        "11": "For the grace of God has appeared for the salvation of all people.",
        "12": "It trains us to reject godlessness and worldly passions, and to live self-controlled, upright, and godly lives in this age,",
        "13": "while we look forward to receiving our blessed hope, the appearance of the glory of our great God and Savior Jesus Christ.",
        "14": "Jesus gave himself for us in order to redeem us from all lawlessness and to make pure, for himself, a special people who are eager to do good works.",
        "15": "Speak of these things, encourage people to do them, and give correction with all authority. Let no one disregard you.",
        "2": "Teach older men to be temperate, dignified, sensible, sound in faith, in love, and in perseverance.",
        "3": "Teach older women likewise to be reverent in behavior, not slanderers or being slaves to much wine, but to be teachers of what is good.",
        "4": "In this way they may train the younger women to love their own husbands and children,",
        "5": "to be sensible, pure, good housekeepers, and obedient to their own husbands, so that God's word may not be insulted.",
        "6": "In the same way, encourage the younger men to use good sense.",
        "7": "In all ways present yourself as an example of good works. In your teaching, show integrity, dignity,",
        "8": "and a correct message that is above criticism, so that anyone who opposes you may be ashamed because they have nothing bad to say about us.",
        "9": "Teach slaves to obey their masters in everything, to please them and not argue with them,",
      },
      "3": Object {
        "1": "Remind them to submit to rulers and authorities, to obey them, to be ready for every good work,",
        "10": "Reject anyone who is causing divisions among you, after one or two warnings,",
        "11": "knowing that such a person has turned from the right way and is sinning and condemns himself.",
        "12": "When I send Artemas or Tychicus to you, hurry and come to me at Nicopolis, where I have decided to spend the winter.",
        "13": "Do everything you can to send on their way Zenas the lawyer and Apollos, so that they lack nothing.",
        "14": "Our people must learn to engage themselves in good works that provide for urgent needs, and so not be unfruitful.",
        "15": "All those who are with me greet you. Greet those who love us in faith. Grace be with all of you.",
        "2": "to revile no one, to not be eager to fight, and to be gentle, showing all humility toward everyone.",
        "3": "For once we ourselves were thoughtless and disobedient. We were led astray and enslaved by various passions and pleasures. We lived in evil and envy. We were detestable and hated one another.",
        "4": "But when the kindness of God our savior and his love for mankind appeared,",
        "5": "it was not by works of righteousness that we did, but by his mercy that he saved us, through the washing of new birth and renewal by the Holy Spirit,",
        "6": "whom God richly poured on us through our Savior Jesus Christ,",
        "7": "so that having been justified by his grace, we might become heirs with the certain hope of eternal life.",
        "8": "This message is trustworthy. I want you to insist on these things, so that those who have believed in God may be careful to engage themselves in good works. These things are good and useful for everyone.",
        "9": "But avoid foolish debates and genealogies and strife and conflict about the law. Those things are unprofitable and worthless.",
      },
      "manifest": Object {
        "description": "tools.target_language",
        "direction": "ltr",
        "language_id": "en",
        "language_name": "English",
        "resource_id": "targetLanguage",
      },
    },
    "bibleId": "targetBible",
    "languageId": "targetLanguage",
    "owner": null,
    "type": "ADD_NEW_BIBLE_TO_RESOURCES",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "alertMessage": "projects.error_loading",
    "buttonText": null,
    "callback": null,
    "loading": undefined,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "showProjectValidationStepper": false,
    "type": "TOGGLE_PROJECT_VALIDATION_STEPPER",
  },
  Object {
    "meta": Object {
      "batch": true,
    },
    "payload": Array [
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "boolean": true,
        "type": "TOGGLE_HOME_VIEW",
      },
      Object {
        "type": "RESET_PROJECT_DETAIL",
      },
      Object {
        "type": "CLOSE_TOOL",
      },
      Object {
        "type": "CLEAR_RESOURCES_REDUCER",
      },
    ],
    "type": "BATCHING_REDUCER.BATCH",
  },
  Object {
    "type": "CLEAR_COPYRIGHT_CHECK_REDUCER",
  },
  Object {
    "type": "CLEAR_PROJECT_INFORMATION_REDUCER",
  },
  Object {
    "type": "CLEAR_MERGE_CONFLICTS_REDUCER",
  },
  Object {
    "type": "RESET_PROJECT_VALIDATION_REDUCER",
  },
  Object {
    "projects": Array [
      Object {
        "bookAbbr": "tit",
        "bookName": "Titus",
        "isSelected": true,
        "lastOpened": null,
        "projectName": "en_ult_tit_book",
        "projectSaveLocation": "/Users/jest/mock/path/translationCore/projects/en_ult_tit_book",
        "target_language": Object {
          "book": Object {
            "name": "Titus",
          },
          "direction": "ltr",
          "id": "en",
          "name": "English",
        },
      },
    ],
    "type": "GET_MY_PROJECTS",
  },
]
`;
